src/test/ui/issues/issue-31769.rs
fn main() {
    #[inline] struct Foo;  //~ ERROR attribute should be applied to function or closure
    #[repr(C)] fn foo() {} //~ ERROR attribute should be applied to struct, enum, or union
}
